# BacktestingMCP

./: .env.template  .gitignore  0.100.0  0.20.0  0.3.3  1.0.0  1.11.0  1.24.0  1.3.0  13.0.0  2.0.0  4.0.0  5.15.0  6.0  8.0.0  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  DCA_STRATEGIES_GUIDE.md  GPU_OPTIMIZATION_SUMMARY.md  GPU_SETUP_COMPLETE.md  PARAMETER_FORMAT_GUIDE.md  QUICKSTART.md  README.md  check_db.py  compare_both_approaches.py  compare_dca_strategies.py  download_dca_data.py  download_signal_data.py  examples.py  pyproject.toml  quickstart_dca.py  requirements.txt  run.py  run_simple_backtest.py  run_swing2_stage1.py  setup.py  setup_venv.py  test_gpu.py  test_param_sensitivity.py
.github/: copilot-instructions.md
config/: settings.py
docs/: ARCHITECTURE.md  CLEANUP_REPORT.md  DCA_STRATEGIES_GUIDE.md  EDGE_SCANNER_PLAN.md  FUNDING_RATE_STRATEGY.md  GPU_GUIDE.md  HERMES_HANDOFF.md  INTEGRATION_PLAN.md  OLLAMA_RTX4090_SETUP.md  STRATEGY_WORKFLOW_FAQ.md  WEBHOOK_BRIDGE.md
docs/archive/: CLEANUP_PLAN.md  IMPLEMENTATION_SUMMARY.md
examples/: README.md  demo_ai_strategies.py  optimize_dca_cupy.py  optimize_dca_gpu.py  optimize_dca_numba.py  optimize_dca_parallel.py  optimize_dca_signal.py  optimize_dca_vectorbt.py  optimize_simple.py  test_backtest.py
examples/archive/: optimize_dca_signal_enhanced.py  optimize_example.py  test_backtest.py
references/: arxiv-research.md
results/swing1_ema_wave_volume/: ethusdt_1h_reopt_b.json
results/swing3_supertrend_adx/: ethusdt_4h_reopt.json
results/swing4_macd_divergence/: ethusdt_1h_reopt_b.json
results/swing5_keltner_breakout/: ethusdt_1h_reopt.json
scripts/: compare_dca_strategies.py  download_hourly_btc.py  fractional_dca_comparison.py  prewarm_ohlcv.py  reoptimize_swings.py  run_dca_comparison.py
setup/: install_crons.sh  setup.sh
src/: __init__.py
src/ai/: README.md  (+2 more)
tools/: __init__.py  check_db.py  check_gpu.py  signal_dca_test.py
(+69 files in other folders)
